Can add stores now

--- a/mysite/templates/home2.html
+++ b/mysite/templates/home2.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +11,8 @@
     <a href="acc/login" class="nav-link">LOG IN</a>
     <a href="acc/reg" class="nav-link">REg</a>
     <a href="acc/logout" class="nav-link">LOG IN</a>
+    <img alt="img01 being slided"src="{% static 'home/img/1.png' %}">
+    <img alt="img0 being slided"src="{% static '0.png' %}">
 
 </body>
 </html>
