--- a/mysite/templates/makemoneypage.html
+++ b/mysite/templates/makemoneypage.html
@@ -7,7 +7,7 @@
 
         <a href="del" class="nav-link" >Join As a Sender</a><br>
 
-        <a href="st/create" class="nav-link">Create Your Store</a>
+        <a href="st/add" class="nav-link">Create Your Store</a>
         {%else%}
         <a href="acc/reg/" >Please Sign up first</a>
         {%endif%}
