--- a/mysite/stores/templates/addStore.html
+++ b/mysite/stores/templates/addStore.html
@@ -1,4 +1,5 @@
-<h1>This is the create form</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<h1>Please Add Your Store's Infos</h1>
 <form class="site-from" action="/mm/st/add/"
       method="POST"  enctype="multipart/form-data">
     {%csrf_token%}
