--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -153,3 +153,46 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </html>
+<h2>All Shops</h2>
+        <hr/>
+         <div class="row">
+
+          {% for i in sts%}
+        <div class="col-md-4">
+          <div class="card mb-4 shadow">
+              <a >
+                   <h1 class="card-text"> {{i.name}}</h1>
+              </a>
+
+              <p> {{i.location}}</p>
+           <img class="card-img-top" src= "{{ i.thumbnail.url }}" alt="No image found!" />
+            <div class="card-body">
+              <p class="card-text">Category: {{i.category}}</p>
+            </div>
+              <div class="card-body">
+              <p class="card-text"> {{i.description}}</p>
+                <br/>
+            </div>
+               <br/>
+          </div>
+        </div>
+             <br/>
+
+          {% endfor %}
+      </div>
+
+    </div>
+
+
+</main>
+
+<footer class="text-muted">
+  <div class="container text-center">
+     <p>©️ Durjoy {% now "Y" %}</p>
+  </div>
+</footer>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+</html>
