--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -78,7 +78,7 @@
         <a href="?#" class="navbar-brand mr right" >Special feature  </a>
     </nav>
 
-    
+
   <!--slider starts from here-->
   <style type="text/css">
 
@@ -96,7 +96,7 @@
       width: 20%;
       float: left;
     }
-    
+
     @keyframes slider {
       0% {
         left: 0;
@@ -126,12 +126,13 @@
         left: -400%;
       }
     }
-    
+
     </style>
     </head>
     <body>
-    
-      <div id="slider"  >
+    <main role="main">
+    <main class="container" >
+        <div id="slider"  >
         <figure>
           <img alt="img0 being slided"src="{% static 'home/img/0.png' %}">
           <img alt="img1 being slided" src="{% static 'home/img/1.png' %}">
@@ -140,9 +141,10 @@
           <img alt="img4 being slided"src="{% static 'home/img/4.png' %}">
         </figure>
       </div>
-    
-    
-    
+    </main>
+
+
+
     </body>
 
 
@@ -153,14 +155,20 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </html>
-<h2>All Shops</h2>
+<main role="main">
+    <div class="container" >
+<h1 class="text-center pt-3">Welcome to Freelance Food Service </h1>
+<br/>
+    <h2>Top Shops in HOME</h2>
         <hr/>
          <div class="row">
 
           {% for i in sts%}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow">
-              <a >
+        <div class="col-md-3">
+          <div class="card mb-3 shadow">
+              <a href="{% url 'detailed_store' i.id %}">
+
+              <a href="{% url 'detailed_store' i.id %}">
                    <h1 class="card-text"> {{i.name}}</h1>
               </a>
 
@@ -172,6 +180,7 @@
               <div class="card-body">
               <p class="card-text"> {{i.description}}</p>
                 <br/>
+              </a>
             </div>
                <br/>
           </div>
