--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -53,7 +53,7 @@
         <a href="mm/st/showall" class="nav-link">All Stores</a>
       </li>
       <li class="nav-item">
-        <a href="mm/st/st" class="nav-link">Your Stores</a>
+        <a href="pl/showall" class="nav-link">All Plans</a>
       </li>
 <!--      <li class="nav-item">-->
 <!--        <a href="acc/reg/" class="nav-link">Sign UP</a>-->
