--- a/mysite/plans/templates/addplanxstore.html
+++ b/mysite/plans/templates/addplanxstore.html
@@ -4,5 +4,5 @@
       method="POST"  enctype="multipart/form-data">
     {%csrf_token%}
     {{form.as_p}}
-    <input type="submit" value="Add Store"/>
+    <input type="submit" value="Add Plan"/>
 </form>
