--- a/mysite/stores/templates/urstore.html
+++ b/mysite/stores/templates/urstore.html
@@ -48,37 +48,38 @@
 
 <main role="main">
     <div class="container" >
-        <img src="{{ detail_store.thumbnail.url }}" class="img-fluid" alt="Responsive image" height="200"width="200">
         <div class="jumbotron p-4 p-md-5 text-black rounded bg-light">
     <div class="col-md-6 px-0">
-
-      <h1 class="display-4 font-italic">{{detail_store.name}}</h1>
-      <p class="lead my-3">{{detail_store.location}}</p>
-      <p class="lead my-3">Category: {{detail_store.category}}</p>
-      <p class="lead my-3">Description: {{detail_store.description}}</p>
-      <p class="lead my-3">Owner: {{detail_store.owner}}</p>
+      <h1 class="display-4 font-italic">Hello {{user.username}},</h1>
+      <p class="lead my-3">These are your stores.</p>
+      <p class="lead my-3">You can add plans to them.</p>
+      <p class="lead my-3">But please select your store as object while adding plan ,
+        I am not too good at programing , beggar perdon !!! :( </p>
     </div>
   </div>
 
 
     </div>
 </main>
-<h1>Plans in this store</h1>
+<h1>Here are your stores </h1>
     <hr/>
 
     <div class="row">
-        {% for i in pls%}
+        {% for i in stores%}
         <div class="col-md-3">
           <div class="card mb-3 shadow">
-              <a href="{% url 'detailed_store'  i.store.id %}">
+              <a href="{% url 'detailed_store' i.id %}">
                   <h1 class="card-text"> {{i.name}}</h1></a>
-              <p> Category :    {{i.category}}</p>
-           <img class="card-img-top" src= "{{ i.foodphoto.url }}" alt="No image found!" />
+              <p> Location :    {{i.location}}</p>
+           <img class="card-img-top" src= "{{ i.thumbnail.url }}" alt="No image found!" />
             <div class="card-body">
-              <p class="card-text">Price: {{i.price}}</p>
+              <p class="card-text">Description : {{i.description}}</p>
             </div>
                    <div class="card-body">
-              <a class="card-text" href="{% url 'detailed_store' i.store.id %}">Shop : {{i.store.name}}</a>
+              <a class="card-text" >StoreObject({{i.id}})</a>
+            </div>
+              <div class="card-body">
+              <a class="card-text" href="{% url 'addplan' %}">Add Plan</a>
             </div>
               <div class="card-body">
               <p class="card-text"> {{i.mealDescription}}</p>
@@ -90,9 +91,11 @@
         </div>
 
              <br/>
+
           {% endfor %}
     </div>
   </body>
+</html>
 
 <footer class="text-muted">
   <div class="container text-center">
