added default GIF XD

--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -1,10 +1,11 @@
+{%load_static%}
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" >
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <head>
 	<link rel="stylesheet" type = "text/css"
-	 href="{%static 'home\img\css\contact.css'%}">
+	 href="{%static 'home\contact.css'%}">
 </head>
 <div class="container contact">
 	<div class="row">
