--- a/mysite/accs/templates/login2.html
+++ b/mysite/accs/templates/login2.html
@@ -9,7 +9,7 @@
 <body>
     <form class="site-from" method="POST" action="/acc/login/">
         {% csrf_token %}
-        {{form}}
+        {{form.as_p}}
         <h1>This is the login form </h1>
         <input type="submit" value="LOG IN SIR ">
     </form>
