--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -1,4 +1,4 @@
-{%load_static%}
+{%load static%}
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" >
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -17,6 +17,7 @@
 				<h4>HOT LINE : 162233</h4>
 			</div>
 		</div>
+
 		<div class="col-md-9">
 			<div class="contact-form" >
 				<div class="form-group">
@@ -45,11 +46,12 @@
 				</div>
 				<div class="form-group">        
 				  <div class="col-sm-offset-2 col-sm-10">
+					  		<form method="get" action="/">
 					<button type="submit" class="btn btn-default">Submit</button>
-				  </div>
+							</form>
 				</div>
 			</div>
 		</div>
-		
+		</form>
 	</div>
 </div>
