--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -21,11 +21,13 @@
 		<div class="col-md-9">
 			<div class="contact-form" >
 				<div class="form-group">
+					<form method="GET" action="/send/">
+
 				  <label class="control-label col-sm-2" for="fname">First Name:</label>
 				  <div class="col-sm-10">          
 					<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
 				  </div>
-				</div>
+
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="lname">Last Name:</label>
 				  <div class="col-sm-10">          
@@ -41,12 +43,11 @@
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="comment">Comment:</label>
 				  <div class="col-sm-10">
-					<textarea class="form-control" rows="5" id="comment"></textarea>
+					<input type="text" class="form-control" id="comment" placeholder="Enter text" name="comment">
 				  </div>
 				</div>
 				<div class="form-group">        
 				  <div class="col-sm-offset-2 col-sm-10">
-					  		<form method="get" action="/">
 					<button type="submit" class="btn btn-default">Submit</button>
 							</form>
 				</div>
