delivery dudes are happy

--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -81,8 +81,8 @@
 
     </nav>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
-        <a href="?#" class="navbar-brand">Stats will be shown here </a>
-        <a href="?#" class="navbar-brand mr right" >Special feature  </a>
+        <a href="dl/showall" class="navbar-brand">Find a delivery boy for you </a>
+        <a href="dl/add" class="navbar-brand mr right" >Apply as a delivery boy  </a>
     </nav>
 
 
