Programing fixed for dguy application v-1.1

--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -83,7 +83,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
         <a href="dl/showall" class="navbar-brand">Find a delivery boy for you </a>
         {% if user.dguy %}
-        <a  href="{% url 'detailed_guy'  user.dguy.id %}"class="navbar-brand">See You CV</a>
+        <a  href="{% url 'detailed_guy'  user.dguy.id %}"class="navbar-brand">See Your CV</a>
         {% else %}
         {% if user.is_authenticated %}
         <a href="dl/add" class="navbar-brand mr right" >Apply as a delivery boy  </a>
@@ -177,7 +177,6 @@
     <h2>Top Shops in HOME</h2>
         <hr/>
          <div class="row">
-
           {% for i in sts%}
         <div class="col-md-3">
           <div class="card mb-3 shadow">
