--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -50,7 +50,7 @@
       </li>
       {% endif %}
       <li class="nav-item">
-        <a href="mm/st/showall" class="nav-link">All Stores</a>
+        <a href="mm/st/showallstore/" class="nav-link">All Stores !!!</a>
       </li>
       <li class="nav-item">
         <a href="pl/showall" class="nav-link">All Plans</a>
