--- a/mysite/templates/makemoneypage.html
+++ b/mysite/templates/makemoneypage.html
@@ -1,15 +1,40 @@
+{%load static%}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <head >
 
+    <link rel="stylesheet" type = "text/css"
+	 href="{%static 'home\makemoneywithus.css'%}">
     <body align = "center">
         {% if user.is_authenticated %}
 
-        <a href="del" class="nav-link" >Join As a Sender</a><br>
-
-        <a href="st/add" class="nav-link">Create Your Store</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      <center> <div id="pop">
+        <h1 align="center"><a href="st/add" class="nav-link">Create Your Store</a></h1></div></center>
         {%else%}
-        <a href="acc/reg/" >Please Sign up first</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+       <center> <div id="pop">
+        <h1 align="center"><a href="acc/reg/" class="nav-link">Please Sign up first</a></h1></div></center>
         {%endif%}
     </body>
 </head>
