--- a/mysite/stores/templates/detail_store.html
+++ b/mysite/stores/templates/detail_store.html
@@ -71,7 +71,7 @@
         <div class="col-md-3">
           <div class="card mb-3 shadow">
               <a href="{% url 'detailed_plan' i.id %}">
-                  <h1 class="card-text"> xxx: {{i.name}}</h1></a>
+                  <h1 class="card-text"> {{i.name}}</h1></a>
               <p> Category :    {{i.category}}</p>
            <img class="card-img-top" src= "{{ i.foodphoto.url }}" alt="No image found!" />
             <div class="card-body">
