--- a/mysite/accs/templates/myprofile.html
+++ b/mysite/accs/templates/myprofile.html
@@ -98,6 +98,34 @@
           {% endfor %}
     </div>
   </body>
+<h1>Here are your Enrollments
+</h1>
+<div class="row">
+        {% for i in els%}
+        <div class="col-md-3">
+          <div class="card mb-3 shadow">
+              <a href="{% url 'detailed_plan' i.plan.id %}">
+                  <h1 class="card-text"> {{i.plan.name}}</h1></a>
+              <p> Location :    {{i.plan.store.location}}</p>
+                <a href="{% url 'detailed_store' i.plan.store.id %}">
+                  <h4 class="card-text"> Store: {{i.plan.store.name}}</h4>
+                </a>
+              <img class="card-img-top" src= "{{ i.plan.foodphoto.url }}" alt="No image found!" />
+
+              <p class="card-text"> Your Meal's Description:<br> {{i.plan.mealDescription}}</p>
+            </div>
+                   <div class="card-body">
+
+            </div>
+               <br/>
+
+          </div>
+        </div>
+
+             <br/>
+
+          {% endfor %}
+    </div>
 </html>
 
 <footer class="text-muted">
