-can enrol with bug (fixed) (durjoy+alim) -login signup is more intuitive

--- a/mysite/accs/templates/signup.html
+++ b/mysite/accs/templates/signup.html
@@ -11,6 +11,10 @@
         {% csrf_token %}
         {{form.as_p}}
         <input type="submit" value="Signup ">
+        <h3>Already have an account?</h3>
+         <h1><a  href="/acc/login/">
+            LOG <IN></IN>
+    </a></h1>
     </form>
 </body>
 </html>
