--- a/mysite/accs/templates/login2.html
+++ b/mysite/accs/templates/login2.html
@@ -11,7 +11,11 @@
         {% csrf_token %}
         {{form.as_p}}
         <h1>This is the login form </h1>
-        <input type="submit" value="LOG IN SIR ">
+        <input type="submit" value="LOG IN ">
+        <h3>New to Freelance Food Service?</h3>
+         <h1><a  href="/acc/reg/">
+            Signup
+    </a></h1>
     </form>
 </body>
 </html>
