--- a/mysite/accs/templates/signup.html
+++ b/mysite/accs/templates/signup.html
@@ -13,7 +13,7 @@
         <input type="submit" value="Signup ">
         <h3>Already have an account?</h3>
          <h1><a  href="/acc/login/">
-            LOG <IN></IN>
+            LOG IN
     </a></h1>
     </form>
 </body>
