--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -60,6 +60,9 @@
             <li class="nav-item">
         <a href="mm/st/ursote" class="nav-link">Your Stores</a>
       </li>
+            <li class="nav-item">
+        <a href="mm/st/db" class="nav-link">DASHBOARD</a>
+      </li>
             {% endif %}
 
 <!--      <li class="nav-item">-->
@@ -81,16 +84,21 @@
 
     </nav>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
+
+
         <a href="dl/showall" class="navbar-brand">Find a delivery boy for you </a>
         {% if user.dguy %}
         <a  href="{% url 'detailed_guy'  user.dguy.id %}"class="navbar-brand">See Your CV</a>
         {% else %}
         {% if user.is_authenticated %}
+
+
         <a href="dl/add" class="navbar-brand mr right" >Apply as a delivery boy  </a>
         {% else %}
         <a href="acc/login" class="navbar-brand mr right" >LOG IN to apply as a delivery guy </a>
         {%endif%}
         {%endif%}
+
     </nav>
 
 
