--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -61,7 +61,7 @@
         <a href="mm/st/ursote" class="nav-link">Your Stores</a>
       </li>
             <li class="nav-item">
-        <a href="mm/st/db" class="nav-link">DASHBOARD</a>
+        <a href="{% url 'dashboard' %}" class="nav-link">DASHBOARD</a>
       </li>
             {% endif %}
 
