-new user dashboard bug fixed v3.0 (f durjoy)

--- a/mysite/templates/makemoneypage.html
+++ b/mysite/templates/makemoneypage.html
@@ -23,7 +23,8 @@
         <br>
         <br>
       <center> <div id="pop">
-        <h1 align="center"><a href="st/add" class="nav-link">Create Your Store</a></h1></div></center>
+        <h1 align="center">
+            <a href="st/add" class="nav-link">Create Your Store</a></h1></div></center>
         {%else%}
         <br>
         <br>
