--- a/mysite/accs/templates/signup.html
+++ b/mysite/accs/templates/signup.html
@@ -1,15 +1,19 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" >
-
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sign up</title>
 </head>
 <body>
+<link rel="stylesheet" type = "text/css"
+	 href="{%static 'home\forms.css'%}">
     <form class="site-from" method="POST" action="/acc/reg/">
+
         {% csrf_token %}
-        {{form.as_p}}
+        {{form.as_table}}
         <input type="submit" value="Signup ">
         <h3>Already have an account?</h3>
          <h1><a  href="/acc/login/">
