--- a/mysite/templates/dahsboard.html
+++ b/mysite/templates/dahsboard.html
@@ -20,6 +20,8 @@
       <th scope="col">Users</th>
       <th scope="col">Location</th>
       <th scope="col">Contact</th>
+      <th scope="col">Start Date</th>
+      <th scope="col">Duration</th>
     </tr>
   </thead>
   <tbody>
@@ -32,6 +34,8 @@
       <td>{{i.enroller}}</td>
       <td>{{i.address}}</td>
       <td>{{i.phone}}</td>
+      <td>{{i.startdate}}</td>
+      <td>{{i.duration}}</td>
     </tr>
         {%endfor%}
   </tbody>
