--- a/mysite/dguys/templates/showdguys.html
+++ b/mysite/dguys/templates/showdguys.html
@@ -50,7 +50,8 @@
     <div class="container" >
 <h1 class="text-center pt-3">Welcome to Freelance Food Service </h1>
 <br/>
-    <h2>Our respected Delivery Dudes </h2>
+<br/>
+    <h2>Freelance Delivery Guys </h2>
         <hr/>
          <div class="row">
 
