--- a/mysite/stores/templates/showStore.html
+++ b/mysite/stores/templates/showStore.html
@@ -50,7 +50,7 @@
     <div class="container" >
 <h1 class="text-center pt-3">Welcome to Freelance Food Service </h1>
 <br/>
-    <h2>All Shops</h2>
+    <h2>All STORES</h2>
         <hr/>
          <div class="row">
 
@@ -63,10 +63,8 @@
            <img class="card-img-top" src= "{{ i.thumbnail.url }}" alt="No image found!" />
             <div class="card-body">
               <p class="card-text">Category: {{i.category}}</p>
-            </div>
-              <div class="card-body">
-              <p class="card-text"> {{i.description}}</p>
-                <br/>
+                <p class="card-text"> {{i.description}}</p>
+
             </div>
                <br/>
               </a>
