--- a/mysite/templates/dahsboard.html
+++ b/mysite/templates/dahsboard.html
@@ -8,8 +8,8 @@
 	 href="{%static 'home\makemoneypage.css'%}">
 
     <body align = "center">
-        <h1>Hello {{user.username}} welcome to your DASHBOARD </h1>
-        <h1>YOUR CUSTOMERS </h1>
+        <h2>Hello {{user.username}}, welcome to your DASHBOARD </h2>
+        <h2>YOUR CUSTOMERS </h2>
 
 <table class="table">
   <thead class="thead-light">
