#for the other guys copyright durjoy updated to TEAM-DAF # makemoney with us html page transition updated

--- a/mysite/templates/makemoneypage.html
+++ b/mysite/templates/makemoneypage.html
@@ -22,7 +22,7 @@
         <br>
         <br>
         <br>
-      <center> <div id="pop">
+      <center> <div id="push">
         <h1 align="center">
             <a href="st/add" class="nav-link">Create Your Store</a></h1></div></center>
         {%else%}
@@ -37,7 +37,7 @@
         <br>
         <br>
         <br>
-       <center> <div id="pop">
+       <center> <div id="push">
         <h1 align="center"><a href="acc/reg/" class="nav-link">Please Sign up first</a></h1></div></center>
         {%endif%}
 
