--- a/mysite/dguys/templates/showdguys.html
+++ b/mysite/dguys/templates/showdguys.html
@@ -85,7 +85,7 @@
 
 <footer class="text-muted">
   <div class="container text-center">
-     <p>©️ Durjoy {% now "Y" %}</p>
+     <p>©️ TEAM-DAF {% now "Y" %}</p>
   </div>
 </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
