--- a/mysite/accs/templates/myprofile.html
+++ b/mysite/accs/templates/myprofile.html
@@ -1,4 +1,4 @@
-
+{% load static%}
 
 <!doctype html>
 <html lang="en">
@@ -53,8 +53,7 @@
       <h1 class="display-4 font-italic">Hello {{user.username}},</h1>
       <p class="lead my-3">These are your stores and also enrolments if you are enrolled of course...</p>
       <p class="lead my-3">You can add plans to your store.</p>
-      <p class="lead my-3">But please select your store as object while adding plan ,
-        I am not too good at programing , beggar perdon !!! :( </p>
+
     </div>
   </div>
 
@@ -62,7 +61,6 @@
     </div>
 <!--</main><a href="/mm/st/add/">-->
 <!--Add New Store</a> This shit has serious url complications-->
-    <h1>Wil Show Enrolments As well , wont let you click</h1>
 <h1>Here are your stores
 </h1>
     <hr/>
@@ -100,32 +98,50 @@
   </body>
 <h1>Here are your Enrollments
 </h1>
-<div class="row">
-        {% for i in els%}
-        <div class="col-md-3">
-          <div class="card mb-3 shadow">
-              <a href="{% url 'detailed_plan' i.plan.id %}">
-                  <h1 class="card-text"> {{i.plan.name}}</h1></a>
-              <p> Location :    {{i.plan.store.location}}</p>
-                <a href="{% url 'detailed_store' i.plan.store.id %}">
-                  <h4 class="card-text"> Store: {{i.plan.store.name}}</h4>
-                </a>
-              <img class="card-img-top" src= "{{ i.plan.foodphoto.url }}" alt="No image found!" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-              <p class="card-text"> Your Meal's Description:<br> {{i.plan.mealDescription}}</p>
-            </div>
-                   <div class="card-body">
+<head >
 
-            </div>
-               <br/>
+    <link rel="stylesheet" type = "text/css"
+	 href="{%static 'home\makemoneypage.css'%}">
 
-          </div>
-        </div>
+    <body align = "center">
 
-             <br/>
 
-          {% endfor %}
-    </div>
+<table class="table">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Store </th>
+      <th scope="col">Plan</th>
+      <th scope="col">Owner</th>
+      <th scope="col">Location</th>
+      <th scope="col">Contact</th>
+      <th scope="col">Start Date</th>
+      <th scope="col">Duration</th>
+    </tr>
+  </thead>
+  <tbody>
+          {%for i in els%}
+
+    <tr>
+      <th scope="row">{{i.id}}</th>
+      <td>{{i.plan.store.name}}</td>
+      <td>{{i.plan.name}}</td>
+      <td>{{i.plan.store.owner}}</td>
+      <td>{{i.address}}</td>
+      <td>{{i.phone}}</td>
+      <td>{{i.startdate}}</td>
+      <td>{{i.duration}}</td>
+    </tr>
+        {%endfor%}
+  </tbody>
+</table>
+
+    </body>
+
+
 </html>
 
 <footer class="text-muted">
