--- a/mysite/accs/templates/myprofile.html
+++ b/mysite/accs/templates/myprofile.html
@@ -131,7 +131,7 @@
       <td>{{i.plan.name}}</td>
       <td>{{i.plan.store.owner}}</td>
       <td>{{i.address}}</td>
-      <td>{{i.phone}}</td>
+      <td>{{i.plan.store.phone}}</td>
       <td>{{i.startdate}}</td>
       <td>{{i.duration}}</td>
     </tr>
