--- a/mysite/stores/templates/detail_store.html
+++ b/mysite/stores/templates/detail_store.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Album example · Bootstrap</title>
+    <title>Detailed Store</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -53,7 +53,8 @@
     <div class="col-md-6 px-0">
 
       <h1 class="display-4 font-italic">{{detail_store.name}}</h1>
-      <p class="lead my-3">{{detail_store.location}}</p>
+      <p class="lead my-3">Location:{{detail_store.location}}</p>
+      <p class="lead my-3">Call: {{detail_store.phone}}</p>
       <p class="lead my-3">Category: {{detail_store.category}}</p>
       <p class="lead my-3">Description: {{detail_store.description}}</p>
       <p class="lead my-3">Owner: {{detail_store.owner}}</p>
