--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -73,11 +73,12 @@
 <!--        <a href="acc/login/" class="nav-link">Log IN</a>-->
 <!--      </li>-->
           <!-- Search form -->
-          <ul class="navbar-nav mr-right">
-              <div class="md-form mt-0">
-              <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-              </div>
-          </ul>
+        <form class="form-inline md-form form-sm active-cyan-2 mt-2"
+                action="{% url 'search' %}">
+            <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                aria-label="Search">
+             <i class="fas fa-search" aria-hidden="true"></i>
+        </form>
         </ul>
       </div>
 
@@ -186,6 +187,7 @@
         <hr/>
          <div class="row">
           {% for i in sts%}
+
         <div class="col-md-3">
           <div class="card mb-3 shadow">
               <a href="{% url 'detailed_store' i.id %}">
