--- a/mysite/templates/search.html
+++ b/mysite/templates/search.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<head >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>Still in making</h1>
+<h1>Showing search results for: {{kw}}</h1>
+<h1><br>{{str}}</h1>
+<div class="row">
+
+          {% for i in plans%}
+        <div class="col-md-3">
+          <div class="card mb-3 shadow">
+              <a href="{% url 'detailed_plan' i.id %}">
+                  <h1 class="card-text"> {{i.name}}</h1></a>
+              <p> Category :    {{i.category}}</p>
+           <img class="card-img-top" src= "{{ i.foodphoto.url }}" alt="No image found!" />
+            <div class="card-body">
+              <p class="card-text">Price: {{i.price}}</p>
+            </div>
+                   <div class="card-body">
+              <a class="card-text" href="{% url 'detailed_store' i.store.id %}">Shop : {{i.store.name}}</a>
+            </div>
+              <div class="card-body">
+              <p class="card-text"> {{i.mealDescription}}</p>
+                <br/>
+            </div>
+               <br/>
+
+          </div>
+        </div>
+
+             <br/>
+
+          {% endfor %}
+      </div>
+
+    </div>
+
+<!--store-->       <div class="row">
+
+          {% for i in sts%}
+        <div class="col-md-3">
+          <div class="card mb-3 shadow">
+              <a href="{% url 'detailed_store' i.id %}">
+                  <h1 class="card-text"> {{i.name}}</h1>
+              <p> {{i.location}}</p>
+           <img class="card-img-top" src= "{{ i.thumbnail.url }}" alt="No image found!" />
+            <div class="card-body">
+              <p class="card-text">Category: {{i.category}}</p>
+                <p class="card-text"> {{i.description}}</p>
+
+            </div>
+               <br/>
+              </a>
+          </div>
+        </div>
+
+             <br/>
+
+          {% endfor %}
+      </div>
+
+    </div>
+
 </body>
 </html>
