-Complete v9.2.1 - search added bug fixed

--- a/mysite/templates/search.html
+++ b/mysite/templates/search.html
@@ -11,8 +11,9 @@
 <body>
 <h1>Showing search results for: {{kw}}</h1>
 <h1><br>{{str}}</h1>
-<div class="row">
+    <h2>Search results for plans: </h2>
 
+<div class="row">
           {% for i in plans%}
         <div class="col-md-3">
           <div class="card mb-3 shadow">
@@ -41,6 +42,7 @@
       </div>
 
     </div>
+    <h2>Search results for stores: </h2>
 
 <!--store-->       <div class="row">
 
