--- a/mysite/plans/templates/detailedplan.html
+++ b/mysite/plans/templates/detailedplan.html
@@ -52,6 +52,14 @@
         <div class="jumbotron p-4 p-md-5 text-black rounded bg-light">
     <div class="col-md-6 px-0">
       <h2 class="display-8 font-italic"> {{plan.name}}  </h2>
+      {% if s == 1 %}
+            <h3 class="display-4 font-italic">
+      <a href={% url 'upp' plan.id %}>Edit Plan</a>
+ <a href="{% url "delp" plan.id %}" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
+
+        {% endif %}
+
+
       <h2 class="display-8 "> Rating:  ({{rating}}⭐) 👤 [{{t}}]</h2>
       <p class="lead my-3">Category : {{plan.category}}</p>
       <p class="lead my-3">Price  : {{plan.price}}</p>
