--- a/mysite/stores/templates/detail_store.html
+++ b/mysite/stores/templates/detail_store.html
@@ -1,5 +1,10 @@
 
+{%load static%}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" type = "text/css"
+	 href="{%static 'home\pop.css'%}">
 <!doctype html>
 <html lang="en">
   <head>
@@ -53,6 +58,15 @@
     <div class="col-md-6 px-0">
 
       <h1 class="display-4 font-italic">{{detail_store.name}}</h1>
+        {% if s == 1 %}
+            <h3 class="display-4 font-italic">
+      <a href={% url 'up' detail_store.id %}>Edit</a>
+ <a href="{% url "del" detail_store.id %}" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
+
+        {% endif %}
+</h3>
+
+
       <p class="lead my-3">Location:{{detail_store.location}}</p>
       <p class="lead my-3">Call: {{detail_store.phone}}</p>
       <p class="lead my-3">Category: {{detail_store.category}}</p>
