--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -10,7 +10,7 @@
   <body>
 
 
-  <nav class="navbar navbar-expand-sm navbar-dark bg-secondary " id ="navbarfixed">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark " id ="navbarfixed">
       <a href="?#" class="navbar-brand">dafnow.com</a>
       <button class="navbar-toggler">
         <span class="navbar-toggler-icon" data-toggle ="collapse" data-target="#navbarmenu">
